# phonemizer.cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  phonemizer.cpp  phonemizer.h  utils.cpp  utils.h
.github/workflows/: build.yml
example/: CMakeLists.txt  main.cpp
export/: export.py  requirements.txt
include/: phonemizer.h
src/: phonemizer.cpp  tokenizer.hpp
weights_export/: export.py  export_model_weights.py
